Removed non-webpagemaker learning projects from 'projects' page listing.
Fixed URLs to point to dropbox endpoint for existing missions.

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -11,7 +11,7 @@
           <h1>Projects</h1>
         </hgroup>
         <p>Steamed, blue mountain ristretto java, trifecta cup eu at and mug shop. Cultivar, crema, medium shop variety iced to go arabica instant mazagran black. Crema at arabica, extraction bar affogato cappuccino brewed. Crema latte extra mocha to go, roast aftertaste percolator siphon so roast.</p>
-        <a class="button"<a href="https://docs.google.com/spreadsheet/viewform?formkey=dERCYVFSQVhyWkxDUC1haFJpRjRrc0E6MA#gid=0">Submit a Project</a>
+        <a class="button"<a href="https://docs.google.com/spreadsheet/viewform?formkey=dERCYVFSQVhyWkxDUC1haFJpRjRrc0E6MA#gid=0">Submit Feedback</a>
       </div>
     </div>
   </div>
@@ -34,7 +34,7 @@
 
     <ul class="projects show-list">
       {{ project(
-           href        = "http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/internetfamous.html",
+           href        = "editor?p=/en-US/projects/dropbox/meme",
            img         = "https://wiki.mozilla.org/images/7/70/Internetfamous.jpg",
            img_alt     = "",
            author      = "Mozilla",
@@ -43,7 +43,7 @@
          ) 
       }}
 	    {{ project(
-           href        = "http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/webarcademap.html",
+           href        = "editor?p=/en-US/projects/dropbox/map",
            img         = "https://wiki.mozilla.org/images/8/88/Arcademap.jpg",
            img_alt     = "",
            author      = "Mozilla",
@@ -52,7 +52,7 @@
          ) 
       }}
 	    {{ project(
-           href        = "http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/elements.html%2523",
+           href        = "editor?p=/en-US/projects/dropbox/stuck",
            img         = "https://wiki.mozilla.org/images/8/89/Stuck90s.png",
            img_alt     = "",
            author      = "Mozilla",
@@ -60,26 +60,8 @@
            description = "Everyone has an embarrassing moment. For the web it was the '90s. Back then, websites were boxy and ugly -- kind of like this page! Wrangle your HTML and CSS style powers to change the content, colors and layout to drag these webpage out of the grungey '90s."
          ) 
       }}
-	    {{ project(
-           href        = "https://wiki.mozilla.org/Webmakers/Projects/Popcorn-DIY",
-           img         = "https://wiki.mozilla.org/images/3/34/Popdiy.png",
-           img_alt     = "",
-           author      = "Mozilla",
-           title       = "Remix your own TV commercial",
-           description = "Add your own voice to a cheesy 1950s TV commercial! Add pop-ups and commentary, change meanings, and hack pop culture using Mozilla Popcorn."
-         ) 
-      }}
-	    {{ project(
-           href        = "https://wiki.mozilla.org/Webmakers/Projects/InanimateAlice-DIY",
-           img         = "https://wiki.mozilla.org/images/5/5c/Iathumb.png",
-           img_alt     = "",
-           author      = "Hive NYC",
-           title       = "Create your own \"Inanimate Alice\" episode",
-           description = "This project uses the popular \"Inanimate Alice\" interactive novel and Mozilla Hackasaurus to create narrative mayhem. Youth can create their own narrative using characters and a storyline they create, learning how to remix the web along the way."
-         ) 
-      }}
  	    {{ project(
-           href        = "http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//dl.dropbox.com/u/5445372/site/web-structable.html",
+           href        = "editor?p=/en-US/projects/dropbox/webstructable",
            img         = "https://wiki.mozilla.org/images/5/59/Webstructables.jpg",
            img_alt     = "",
            author      = "Mozilla",
@@ -88,7 +70,7 @@
          ) 
       }}
       {{ project(
-           href        = "http://toolness.github.com/friendlycode/?p=/p/151",
+           href        = "editor?p=/en-US/projects/dropbox/soapbox",
            img         = "https://wiki.mozilla.org/images/b/be/Soapthumb.png", 
            img_alt     = "",
            author      = "Hive NYC",
