--- a/webpagemaker/website/templates/website/home.html
+++ b/webpagemaker/website/templates/website/home.html
@@ -11,7 +11,7 @@
           <h1>Webpage Maker?</h1>
         </hgroup>
         <p>Learn HTML, webify video or level up on game development today. The Webpage Maker is a two pane editor that allows you to design, edit and publish webpages in real-time on the Web. The Web is your canvas. What are you going to do with it?</p>
-        <p><a class="button-blue">Go to the editor</a></p>
+        <p><a class="button-blue" href="editor">Go to the editor</a></p>
       </div>
       <div class="pat span4">
         <div class="pat-hands"></div>
