Starting copy changes

--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -3,10 +3,41 @@
 {% endblock %}
 {% block page_id %}about{% endblock %}
 {% block body %}
-  <div class="container">
-    <div class="hero-unit">
-      <h1>About</h1>
-      <p>Here you can learn more about what this project is about. Eventually.</p>
+  <div class="container divider">
+    <div class="row">
+      <div class="hero-unit">
+        <hgroup class="large">
+          <h2>Mozilla Thimble App</h2>
+          <h1>Webmaking made easy</h1>
+        </hgroup>
+        <p>
+          The Thimble App makes it ridiculously simple to make stuff on the web.
+        </p>
+        <p>
+          The Thimble App lets you make your own real, fully functional web pages in minutes. Then host and share them with a single click. Sharpening your web skills along the way. Easy, huh? Try it out now.
+        </p>
+        <ul>
+          <li>Write and edit</li>
+          <li>Share with a click</li>
+          <li>Webmaking made easy</li>
+          <li>Get involved</li>
+        </ul>
+        <p>Write and edit HTML and CSS right in your browser.</p>
+        <p>Webpage Maker makes it simple to work with HTML and CSS, the building blocks of the web, even if you've never done it before. Just type on the left, then see what the finished page will look like on the right. Webpage Maker also helps check your work as you go, providing a simple "spell check" for code to help you spot and squash errors instantly. 
+        </p>
+                      Share fully functional web pages with one click.
+                      Webpage Maker isn't just a learning tool or toy. It lets you create your own real, fully functional web pages -- for your band, your pet rock, your business, or whatever -- and then share them with a click. There's also plenty of starter projects and templates to help you make something amazing quickly.
+                      Webmaking made easy.
+                      Mozilla is a non-profit that believes everyone should be able to make and share with the open web. But creating, hosting or tweaking your own stuff is often still too difficult -- with obstacles like learning HTML and CSS, struggling with servers to preview your work, or figuring out where your content will live online. Webpage Maker clears away those barriers, making it easier to create your own projects quickly and learn web skills in a way that's easy, visual and fun. 
+                      Get involved
+                      * Don't just sit there -- make something! Try it out now.
+                      * Learn more. Check out our handy Webpage Maker starter projects, see what others are making, or check out our F.A.Q.
+                      * Stay in touch through our mailing list or Twitter
+                      * Join our open community calls  to share ideas or get more involved.
+                      * File a bug or check out our source code to make Webpage Maker better.
+                      * Check out our content guidelines.
+
+      </div>
     </div>
   </div> 
 {% endblock %}
