--- a/webpagemaker/website/templates/website/home.html
+++ b/webpagemaker/website/templates/website/home.html
@@ -7,11 +7,13 @@
     <div class="row">
       <div class="hero-unit span6">
         <hgroup class="large">
-          <h2>What is</h2>
-          <h1>Webpage Maker?</h1>
+          <h2>Webmaking</h2>
+          <h1>made easy</h1>
         </hgroup>
-        <p>Learn HTML, webify video or level up on game development today. The Webpage Maker is a two pane editor that allows you to design, edit and publish webpages in real-time on the Web. The Web is your canvas. What are you going to do with it?</p>
-        <p><a class="button-blue" href="editor">Go to the editor</a></p>
+        <p>
+          The Mozilla Thimble App makes it ridiculously simple to create your own web pages. Write and edit HTML and CSS right in your browser. Instantly preview your work. Then host and share your finished pages with a single click. Easy, huh?
+        </p>
+        <p><a class="button-blue" href="editor">Get started</a></p>
       </div>
       <div class="pat span4">
         <div class="pat-hands"></div>
