--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -7,10 +7,21 @@
     <div class="row projectpeoples">
       <div class="hero-unit span6">
         <hgroup class="large">
-          <h2>Webpage Maker</h2>
+          <h2>Thimble App</h2>
           <h1>Projects</h1>
         </hgroup>
-        <p>Steamed, blue mountain ristretto java, trifecta cup eu at and mug shop. Cultivar, crema, medium shop variety iced to go arabica instant mazagran black. Crema at arabica, extraction bar affogato cappuccino brewed. Crema latte extra mocha to go, roast aftertaste percolator siphon so roast.</p>
+        <p>
+          Learning by making. Webmaker projects are designed to help you make something amazing on the web fast.
+          Using Mozilla Webmaker tools like Popcorn, Hackasaurus and the Thimble App, you can:
+        </p>
+        <ul>
+          <li>take apart and remix web sites,</li>
+          <li>make your own webpages, interactive videos and other cool stuff in minutes,</li>
+          <li>sharpen your webmaking skills. From HTML and CSS to fancy stuff.</li> 
+        </ul>
+        <p>
+          We're preparing a set of these projects for the Mozilla Summer Code Party. The goal: teach the world the basics of coding and webmaking. Through bite-sized games, projects and recipes that are easy, social and fun. Partners and contributors will be able to share their own webmaker projects as well. 
+        </p>
         <a class="button"<a href="https://docs.google.com/spreadsheet/viewform?formkey=dERCYVFSQVhyWkxDUC1haFJpRjRrc0E6MA#gid=0">Submit Feedback</a>
       </div>
     </div>
