Changed webpage maker to thimble app in layout template

--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -2,7 +2,7 @@
 <html lang="{{ LANG }}" dir="{{ DIR }}">
 <head>
   <meta charset="utf-8">
-  <title>Webpage Maker</title>
+  <title>Mozilla Thimble App</title>
   <link rel="stylesheet" href="/media/css/opensans/stylesheet.css">
   <link rel="stylesheet" href="/media/css/sandstone.css">
   <link rel="stylesheet" href="/media/css/wpm.css">
@@ -21,7 +21,7 @@
           <div class="logo">
             <a href=".">
               <img src="/media/img/mozilla-logo.png">
-              Webpage Maker
+              Thimble App 
             </a>
           </div>
         </div>
