Changed gallery page to approved copy

--- a/webpagemaker/website/templates/website/gallery.html
+++ b/webpagemaker/website/templates/website/gallery.html
@@ -7,10 +7,15 @@
     <div class="row gallerycat">
       <div class="hero-unit span6">
         <hgroup class="large">
-          <h2>Look, share and remix</h2>
+          <h2>Look and share</h2>
           <h1>Gallery</h1>
         </hgroup>
-        <p>Fair trade aged as qui wings grounds seasonal. Dark saucer milk, dripper mug cinnamon, variety sugar turkish body white. Wings qui redeye, variety roast chicory as trifecta foam café au lait. Qui, beans, cultivar americano decaffeinated that americano single origin.</p>
+        <p>
+          What are other people making with Webpage Maker? Here's a gallery of awesome examples for inspiration. 
+        </p>
+        <p>
+          You can remix any of these pages to make them your own.
+        </p>
       </div>
     </div>
   </div>
