--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -4,9 +4,75 @@
 {% block page_id %}about{% endblock %}
 {% block body %}
   <div class="container">
-    <div class="hero-unit">
-      <h1>About</h1>
-      <p>Here you can learn more about what this project is about. Eventually.</p>
+    <div class="row">
+      <div class="hero-unit span10 divider">
+        <h1>About</h1>
+        <p>
+          Mozilla Thimble App makes it ridiculously simple to make stuff on the web. Thimble lets you make your own real, fully functional web pages in minutes. Then host and share them with a single click. Sharpening your web skills along the way. Easy, huh? <a href="/editor">Try it out now.</a>
+        </p>
+      </div>
     </div>
+
+    <div class="row">
+      <div class="span10 divider">
+        <h2>
+          Write and edit HTML and CSS right in your browser.
+        </h2>
+        <p>
+  Thimble makes it simple to work with HTML and CSS, the building blocks of the web, even if you've never done it before. Just type on the left, then see what the finished page will look like on the right. Thimble also helps check your work as you go, providing a simple "spell check" for code to help you spot and squash errors instantly.
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="span10 divider">
+        <h2>
+          Share fully functional web pages with one click.
+        </h2>
+        <p>
+       Webpage Maker isn't just a learning tool or toy. It lets you create your own real, fully functional web pages -- for your band, your pet rock, your business, or whatever -- and then share them with a click. There's also plenty of starter projects and templates to help you make something amazing quickly. 
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="span10 divider">
+        <h2>
+        Webmaking made easy.
+        </h2>
+        <p>
+        Mozilla is a non-profit that believes everyone should be able to make and share with the open web. But creating, hosting or tweaking your own stuff is often still too difficult -- with obstacles like learning HTML and CSS, struggling with servers to preview your work, or figuring out where your content will live online. Webpage Maker clears away those barriers, making it easier to create your own projects quickly and learn web skills in a way that's easy, visual and fun. 
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="span10 divider">
+        <h2>
+        Get involved
+        </h2>
+        <ul>
+          <li>
+            Don't just sit there -- make something! Try it out now.
+          </li>
+          <li>
+            Learn more. Check out our handy Webpage Maker starter projects, see what others are making, or check out our F.A.Q.
+          </li>
+          <li>
+            Stay in touch through our mailing list or Twitter
+          </li>
+          <li>
+            Join our open community calls  to share ideas or get more involved.
+          </li>
+          <li>
+            File a bug or check out our source code to make Webpage Maker better.
+          </li>
+          <li>
+            Check out our content guidelines.
+          </li>
+        </ul>
+      </div>
+    </div>
+     
   </div> 
 {% endblock %}
