Oops... obliterate all traces of Webpage Maker from copy

--- a/webpagemaker/website/templates/website/about.html
+++ b/webpagemaker/website/templates/website/about.html
@@ -8,7 +8,7 @@
       <div class="hero-unit span10 divider">
         <h1>About</h1>
         <p>
-          Mozilla Thimble App makes it ridiculously simple to make stuff on the web. Thimble lets you make your own real, fully functional web pages in minutes. Then host and share them with a single click. Sharpening your web skills along the way. Easy, huh? <a href="/editor">Try it out now.</a>
+          Mozilla Thimble App makes it ridiculously simple to make stuff on the web. Thimble lets you make your own real, fully functional web pages in minutes. Then host and share them with a single click. Sharpen your web skills along the way. Easy, huh? <a href="/editor">Try it out now.</a>
         </p>
       </div>
     </div>
@@ -19,7 +19,7 @@
           Write and edit HTML and CSS right in your browser.
         </h2>
         <p>
-  Thimble makes it simple to work with HTML and CSS, the building blocks of the web, even if you've never done it before. Just type on the left, then see what the finished page will look like on the right. Thimble also helps check your work as you go, providing a simple "spell check" for code to help you spot and squash errors instantly.
+  Thimble makes it easy to work with HTML and CSS, the building blocks of the web, even if you've never done it before. Just type on the left, then see what the finished page will look like on the right. Thimble also helps check your work as you go, providing a simple "spell check" for code to help you spot and squash errors instantly.
         </p>
       </div>
     </div>
@@ -30,7 +30,7 @@
           Share fully functional web pages with one click.
         </h2>
         <p>
-       Webpage Maker isn't just a learning tool or toy. It lets you create your own real, fully functional web pages -- for your band, your pet rock, your business, or whatever -- and then share them with a click. There's also plenty of starter projects and templates to help you make something amazing quickly. 
+       Thimble isn't just a learning tool or toy. It lets you create your own real, fully functional web pages -- for your band, your pet rock, your business, or whatever -- and then share them with a click. There's also plenty of starter projects and templates to help you make something amazing quickly. 
         </p>
       </div>
     </div>
@@ -41,7 +41,7 @@
         Webmaking made easy.
         </h2>
         <p>
-        Mozilla is a non-profit that believes everyone should be able to make and share with the open web. But creating, hosting or tweaking your own stuff is often still too difficult -- with obstacles like learning HTML and CSS, struggling with servers to preview your work, or figuring out where your content will live online. Webpage Maker clears away those barriers, making it easier to create your own projects quickly and learn web skills in a way that's easy, visual and fun. 
+        Mozilla is a non-profit that believes everyone should be able to make and share with the open web. But creating, hosting or tweaking your own stuff is often still too difficult -- with obstacles like learning HTML and CSS, struggling with servers to preview your work, or figuring out where your content will live online. Thimble clears away those barriers, making it easier to create your own projects quickly and learn web skills in a way that's easy, visual and fun. 
         </p>
       </div>
     </div>
@@ -56,7 +56,7 @@
             Don't just sit there -- make something! Try it out now.
           </li>
           <li>
-            Learn more. Check out our handy Webpage Maker starter projects, see what others are making, or check out our F.A.Q.
+            Learn more. Check out our handy Thimble starter projects, see what others are making, or check out our F.A.Q.
           </li>
           <li>
             Stay in touch through our mailing list or Twitter
@@ -65,7 +65,7 @@
             Join our open community calls  to share ideas or get more involved.
           </li>
           <li>
-            File a bug or check out our source code to make Webpage Maker better.
+            File a bug or check out our source code to make Thimble better.
           </li>
           <li>
             Check out our content guidelines.
