--- a/webpagemaker/website/templates/website/gallery.html
+++ b/webpagemaker/website/templates/website/gallery.html
@@ -11,7 +11,7 @@
           <h1>Gallery</h1>
         </hgroup>
         <p>
-          What are other people making with Webpage Maker? Here's a gallery of awesome examples for inspiration. 
+          What are other people making with Thimble? Here's a gallery of awesome examples for inspiration. 
         </p>
         <p>
           You can remix any of these pages to make them your own.
