--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -7,7 +7,7 @@
     <div class="row projectpeoples">
       <div class="hero-unit span6">
         <hgroup class="large">
-          <h2>Webpage Maker</h2>
+          <h2>Thimble App</h2>
           <h1>Projects</h1>
         </hgroup>
         <p>Steamed, blue mountain ristretto java, trifecta cup eu at and mug shop. Cultivar, crema, medium shop variety iced to go arabica instant mazagran black. Crema at arabica, extraction bar affogato cappuccino brewed. Crema latte extra mocha to go, roast aftertaste percolator siphon so roast.</p>
