--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -44,8 +44,8 @@
     <section id="page-bottom">
       <footer id="colophon">
         <div class="row">
-          <div class="span3">
-            <h2>make.mozilla</h2>
+          <div class="span2">
+            <h2><img src="/media/img/footer-logo.png" alt="Mozilla Thimble App"></h2>
           </div>
 
           <nav class="span2">
