--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Mozilla Thimble App</title>
   <link rel="stylesheet" href="/media/css/opensans/stylesheet.css">
+  <link rel="stylesheet" href="/media/css/press-start/stylesheet.css">
   <link rel="stylesheet" href="/media/css/sandstone.css">
   <link rel="stylesheet" href="/media/css/wpm.css">
   <link href="//www.mozilla.org/tabzilla/media/css/tabzilla.css" rel="stylesheet">
